--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "build": "remix build",
     "dev": "remix dev",
     "format": "prettier --write 'app/**/*.{css,ts,tsx}'",
-    "lintx": "eslint --fix --quiet app --ext .ts,.tsx",
-    "lint": "eslint --ext .ts,.tsx app/",
+    "lint": "eslint --fix --ext .js,.ts,.tsx app/",
     "start": "remix-serve build",
     "typecheck": "tsc"
   },
